--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-﻿aiohappyeyeballs==2.6.1
+# --- Critical: CPU Optimized PyTorch (Fixes Timeout) ---
+torch==2.5.1 --index-url https://download.pytorch.org/whl/cpu
+
+# --- Core Dependencies ---
+fastapi==0.128.0
+uvicorn==0.40.0
+python-dotenv==1.2.1
+click==8.3.1
+requests==2.32.5
+
+# --- AI & Vector DB ---
+chromadb==1.4.0
+faiss-cpu==1.13.2
+sentence-transformers==5.2.0
+langchain==1.2.3
+langchain-community==0.4.1
+langchain-core==1.2.7
+langchain-groq==1.1.1
+langchain-text-splitters==1.1.0
+langgraph==1.0.6
+huggingface-hub==0.36.0
+transformers==4.48.0
+numpy==1.26.4
+scikit-learn==1.6.0
+
+# --- Fix for Railway/ChromaDB (Required) ---
+pysqlite3-binary
+
+# --- Supporting Libraries (Cleaned) ---
+aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 aiosignal==1.4.0
 annotated-doc==0.0.4
@@ -9,10 +38,8 @@ attrs==25.4.0
 backoff==2.2.1
 bcrypt==5.0.0
 build==1.4.0
-certifi==2026.1.4
+certifi==2024.12.14
 charset-normalizer==3.4.4
-chromadb==1.4.0
-click==8.3.1
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.3
@@ -22,141 +49,113 @@ decorator==5.2.1
 distro==1.9.0
 durationpy==0.10
 executing==2.2.1
-faiss-cpu==1.13.2
-fastapi==0.128.0
-filelock==3.20.3
+filelock==3.13.1
 flatbuffers==25.12.19
-frozenlist==1.8.0
-fsspec==2026.1.0
-google-auth==2.47.0
-googleapis-common-protos==1.72.0
-greenlet==3.3.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+google-auth==2.38.0
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
 groq==0.37.1
-grpcio==1.76.0
-h11==0.16.0
-hf-xet==1.2.0
-httpcore==1.0.9
-httptools==0.7.1
+grpcio==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.3
-huggingface-hub==0.36.0
 humanfriendly==10.0
-idna==3.11
-importlib_metadata==8.7.1
+idna==3.10
+importlib_metadata==8.5.0
 importlib_resources==6.5.2
-ipykernel==7.1.0
-ipython==9.9.0
-ipython_pygments_lexers==1.1.1
+ipykernel==6.29.5
+ipython==8.31.0
 jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.3
+Jinja2==3.1.5
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-jupyter_client==8.8.0
-jupyter_core==5.9.1
-kubernetes==34.1.0
-langchain==1.2.3
-langchain-classic==1.0.1
-langchain-community==0.4.1
-langchain-core==1.2.7
-langchain-groq==1.1.1
-langchain-text-splitters==1.1.0
-langgraph==1.0.6
-langgraph-checkpoint==4.0.0
-langgraph-prebuilt==1.0.6
-langgraph-sdk==0.3.3
-langsmith==0.6.2
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-marshmallow==3.26.2
-matplotlib-inline==0.2.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kubernetes==32.0.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.24.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-mmh3==5.2.0
+mmh3==5.1.0
 mpmath==1.3.0
-multidict==6.7.0
-mypy_extensions==1.1.0
+multidict==6.1.0
+mypy_extensions==1.0.0
 nest-asyncio==1.6.0
-networkx==3.6.1
-numpy==2.4.1
-oauthlib==3.3.1
-onnxruntime==1.23.2
-opentelemetry-api==1.39.1
-opentelemetry-exporter-otlp-proto-common==1.39.1
-opentelemetry-exporter-otlp-proto-grpc==1.39.1
-opentelemetry-proto==1.39.1
-opentelemetry-sdk==1.39.1
-opentelemetry-semantic-conventions==0.60b1
-orjson==3.11.5
-ormsgpack==1.12.1
+networkx==3.4.2
+oauthlib==3.2.2
+onnxruntime==1.20.1
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+orjson==3.10.15
+ormsgpack==1.8.0
 overrides==7.7.0
-packaging==25.0
-parso==0.8.5
-platformdirs==4.5.1
-posthog==5.4.0
-prompt_toolkit==3.0.52
-propcache==0.4.1
-protobuf==6.33.4
-psutil==7.2.1
+packaging==24.2
+parso==0.8.4
+platformdirs==4.3.6
+posthog==3.10.0
+prompt_toolkit==3.0.50
+propcache==0.2.1
+protobuf==5.29.3
+psutil==6.1.1
 pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pybase64==1.4.3
-pydantic==2.12.5
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-Pygments==2.19.2
-PyMuPDF==1.26.7
-pypdf==6.6.0
+pybase64==1.4.0
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyMuPDF==1.25.2
+pypdf==5.3.0
 PyPika==0.48.9
 pyproject_hooks==1.2.0
-pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-PyYAML==6.0.3
-pyzmq==27.1.0
-referencing==0.37.0
-regex==2025.11.3
-requests==2.32.5
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.36.1
+regex==2024.11.6
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rich==14.2.0
-rpds-py==0.30.0
-rsa==4.9.1
-safetensors==0.7.0
-scikit-learn==1.8.0
-scipy==1.17.0
-sentence-transformers==5.2.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+safetensors==0.5.2
+scipy==1.15.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.45
+SQLAlchemy==2.0.37
 stack-data==0.6.3
-starlette==0.50.0
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tokenizers==0.22.2
-torch==2.9.1
-tornado==6.5.4
+starlette==0.45.3
+sympy==1.13.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.57.5
-typer==0.21.1
-typer-slim==0.21.1
+typer==0.15.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
-typing_extensions==4.15.0
+typing_extensions==4.12.2
 urllib3==2.3.0
-uuid_utils==0.13.0
-uvicorn==0.40.0
-watchfiles==1.1.1
-wcwidth==0.2.14
-websocket-client==1.9.0
-websockets==16.0
-xxhash==3.6.0
-yarl==1.22.0
-zipp==3.23.0
-zstandard==0.25.0
-pysqlite3-binary
+uuid_utils==0.10.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==14.1
+xxhash==3.5.0
+yarl==1.18.3
+zipp==3.21.0
+zstandard==0.23.0
